welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var 	dejaFait,s:Int
        ^Variables:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var 	dejaFait,s:Int
                 ^Variables:8: error: not found: value prendbiscuit
prendbiscuit();
^